<!--
 ~ Copyright © Harsh Shandilya.
 ~ Use of this source code is governed by an MIT-style
 ~ license that can be found in the LICENSE file or at
 ~ https://opensource.org/licenses/MIT.
 -->
<resources>
  <string name="app_name">Claw</string>
  <string name="saved_posts_widget_description">View your saved Lobsters posts</string>
  <string name="hottest_posts_widget_description">View the hottest posts on Lobsters</string>
  <string name="saved_posts">Saved posts</string>
  <string name="see_more_posts">See more posts</string>
  <plurals name="comments">
    <item quantity="one">%1$d comment</item>
    <item quantity="other">%1$d comments</item>
  </plurals>
  <string name="no_post_selected">No post selected</string>
  <string name="data_management">Data Management</string>
  <string name="data_transfer">Data transfer</string>
  <string name="import_and_export_your_saved_posts">Import and export your saved posts</string>
  <string name="posts">Posts</string>
  <string name="version">Version</string>
  <string name="version_placeholder">%1$s (%2$s)</string>
  <string name="posts_saved_locally">%1$s posts saved locally</string>
  <string name="tag_filtering">Tag filtering</string>
  <string name="filter_posts_by_tags">Filter posts by tags</string>
  <string name="about">About</string>
  <string name="libraries">Libraries</string>
  <string name="view_open_source_libraries_used_in_this_">View open source libraries used in this app</string>
  <string name="source_code">Source code</string>
  <string name="view_the_source_code_on_github">View the source code on GitHub</string>
  <string name="import_action">Import</string>
  <string name="export">Export</string>
  <string name="go_back_to_previous_screen">Go back to previous screen</string>
  <string name="the_app_icon_for_claw">The app icon for Claw</string>
  <string name="search_posts">Search posts</string>
  <string name="close_search">Close search</string>
  <string name="settings">Settings</string>
  <string name="empty_inbox_icon">Empty inbox icon</string>
  <string name="no_saved_posts">No saved posts</string>
  <string name="no_search_results">No search results</string>
  <string name="enable_post_a_day_reminders">Enable post-a-day reminders</string>
  <string name="enable_post_a_day_reminders_summary">Get a notification with a random saved post every day</string>
  <string name="daily_saved_post_reminder_time">Reminder time</string>
  <string name="daily_saved_post_notification_channel_name">Daily saved post</string>
  <string name="daily_saved_post_notification_text">A saved post for today</string>
  <string name="daily_saved_post_discussion_action">Check out the discussion</string>
  <string name="daily_saved_post_notification_permission_denied">Notification permission is required for daily reminders</string>
</resources>
