/*
 * Copyright © 2022 Harsh Shandilya.
 * Use of this source code is governed by an MIT-style
 * license that can be found in the LICENSE file or at
 * https://opensource.org/licenses/MIT.
 */
package dev.msfjarvis.claw.common.res

import dev.msfjarvis.claw.common.res.clawicons.account_circle_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.arrow_back_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.comment_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.favorite_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.favorite_border_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.new_releases_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.new_releases_filled_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.public_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.whatshot_black_24dp
import dev.msfjarvis.claw.common.res.clawicons.whatshot_filled_black_24dp

object ClawIcons {

  val Account = account_circle_black_24dp()

  val ArrowBack = arrow_back_black_24dp()

  val Comment = comment_black_24dp()

  val Flame = whatshot_black_24dp()

  val FlameFilled = whatshot_filled_black_24dp()

  val Heart = favorite_black_24dp()

  val HeartBorder = favorite_border_black_24dp()

  val New = new_releases_black_24dp()

  val NewFilled = new_releases_filled_black_24dp()

  val Web = public_black_24dp()
}
