...
          contentColor = MaterialTheme.colorScheme.onSecondaryContainer,
        ),
    ) {
      Icon(
        imageVector = if (saved) Icons.Filled.Favorite else Icons.Filled.FavoriteBorder,
        contentDescription = if (saved) "Remove from saved posts" else "Add to saved posts",
        modifier = Modifier.testTag("save_button"),
      )
    }
  }
}

@Composable
...
      ),
  ) {
    Box(modifier = Modifier.size(width = 42.dp, height = 40.dp)) {
      Icon(
        imageVector = Icons.AutoMirrored.Filled.Comment,
        contentDescription = stringResource(R.string.open_comments),
        modifier = Modifier.align(Alignment.Center).testTag("comments_button"),
      )
      Box(
        modifier =
          Modifier.align(Alignment.TopEnd)
            .requiredSizeIn(16.dp, 16.dp)
            .background(MaterialTheme.colorScheme.tertiaryContainer, CircleShape)
...
