...
    LazyColumn(modifier = modifier, contentPadding = contentPadding, state = commentListState) {
      item {
        CommentsHeader(
          post = details,
          postActions = postActions,
          openUserProfile = openUserProfile,
          modifier = Modifier.testTag("comments_header"),
        )
      }

      if (commentNodes.isNotEmpty()) {
        item(key = "comments_header") {
          Text(
...
