appId: dev.msfjarvis.claw.android
tags:
  - feature
  - settings
---
- runFlow: ../helpers/launch-app.yaml
- tapOn: "Settings"
- waitForAnimationToEnd
- assertVisible: "Account"
- assertVisible: "Import"
- assertVisible: "Export"
- assertVisible: "Posts"
- assertVisible: "Tag filtering"
- assertVisible: "Enable post-a-day reminders"
- assertVisible: "About"
- assertVisible: "Version"
- scroll
- back
- assertVisible: "Hottest"
