appId: dev.msfjarvis.claw.android
tags:
  - feature
  - critical
  - database
---
- runFlow: ../helpers/launch-app.yaml
- tapOn: "Hottest"
- extendedWaitUntil:
    visible:
      id: "save_button"
    timeout: 5000
- tapOn:
    id: "save_button"
    index: 0
- extendedWaitUntil:
    visible: "Saved"
    timeout: 5000
- tapOn: "Saved"
- assertVisible: "Saved"
- extendedWaitUntil:
    visible:
      id: ".*"
    timeout: 5000
- tapOn:
    id: "save_button"
    index: 0
- extendedWaitUntil:
    visible: "No saved posts"
    timeout: 5000
