appId: dev.msfjarvis.claw.android
tags:
  - feature
  - comments
---
- runFlow: ../helpers/launch-app.yaml
- tapOn: "Hottest"
- extendedWaitUntil:
    visible:
      id: "comments_button"
    timeout: 5000
- tapOn:
    id: "comments_button"
    index: 0
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000
- scroll
- back
- assertVisible: "Hottest"
