appId: dev.msfjarvis.claw.android
tags:
  - regression
  - database
  - critical
---
- launchApp
- tapOn: "Hottest"
- extendedWaitUntil:
    visible:
      id: "save_button"
    timeout: 5000
- tapOn:
    id: "save_button"
    index: 0
- extendedWaitUntil:
    visible: "Saved"
    timeout: 5000
- stopApp
- launchApp
- tapOn: "Saved"
- assertVisible: "Saved"
- extendedWaitUntil:
    visible:
      id: "save_button"
    timeout: 5000
- extendedWaitUntil:
    visible:
      id: "save_button"
    timeout: 5000
- tapOn:
    id: "save_button"
    index: 0
- extendedWaitUntil:
    visible: "No saved posts"
    timeout: 5000
