appId: dev.msfjarvis.claw.android
tags:
  - tablet
  - navigation
  - regression
---
- runFlow: ../helpers/launch-app.yaml

- extendedWaitUntil:
    visible:
      id: "comments_button"
    timeout: 5000

- tapOn:
    id: "comments_button"
    index: 0
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000

- tapOn:
    id: "comments_button"
    index: 1
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000

- tapOn:
    id: "comments_button"
    index: 2
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000

- back
- assertVisible: "Hottest"
