appId: dev.msfjarvis.claw.android
---
- launchApp
- tapOn:
    id: "save_button"
    index: 0
- tapOn:
    id: "save_button"
    index: 1
- takeScreenshot: "HottestPosts"
- tapOn: "Saved"
- extendedWaitUntil:
    visible:
      id: "comments_button"
    timeout: 5000
- waitForAnimationToEnd:
    timeout: 1000
- takeScreenshot: "SavedPosts"
- tapOn: "Search posts"
- inputText: "Rust"
- pressKey: Enter
- hideKeyboard
- extendedWaitUntil:
    visible:
      id: "comments_button"
    timeout: 5000
- waitForAnimationToEnd:
    timeout: 2000
- takeScreenshot: "SearchPage"
- back
- back
- tapOn: "Settings"
- takeScreenshot: "SettingsPage"
- tapOn: "Tag filtering"
- tapOn: "ai"
- tapOn: "Block Forever"
- tapOn: "c"
- tapOn: "Block Until"
- tapOn: "css"
- tapOn: "Block Forever"
- takeScreenshot: "TagFiltering"
- tapOn: "Save"
- back
- tapOn: "Hottest"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: "comments_button"
    index: 0
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000
- back
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: "comments_button"
    index: 0
- extendedWaitUntil:
    visible:
      id: "comments_header"
    timeout: 5000
- takeScreenshot: "CommentsPage"
