appId: dev.msfjarvis.claw.android
---
- launchApp
- tapOn:
    id: "save_button"
    index: 0
- tapOn:
    id: "save_button"
    index: 1
- takeScreenshot: "HottestPosts"
- tapOn: "Saved"
- takeScreenshot: "SavedPosts"
- tapOn: "Hottest"
- tapOn: "Open comments"
- waitForAnimationToEnd
- takeScreenshot: "CommentsPage"
